--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,4 +1,4 @@
 <mat-card>
-  <mat-calendar [(selected)]="date"></mat-calendar>
+  <mat-calendar [(selected)]="date" (selectedChange)="onDateChange.emit($event)"></mat-calendar>
 </mat-card>
-<p>Selected date: {{date}}</p>
+<!--<p>Selected date: {{date}}</p>-->
