--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,8 @@
-
-<div fxLayout="row" >
+<div fxLayout="row">
   <app-calendar></app-calendar>
 
   <div fxFlex fxLayout="column" fxLayoutAlign="center center">
-    <p>my content</p>
-    datepicker
-    <mat-form-field appearance="fill">
-      <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="picker">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-
+    <p>Welcome to the desk booking application!</p>
+    <p>Here you can reserve your working place easily.</p>
   </div>
 </div>
