--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,17 +1,24 @@
-<form class="login-form">
-  <h1>Login:</h1>
-  <mat-form-field class="login-full-width" appearance="fill">
-    <mat-label>User name</mat-label>
-    <input [formControl]="loginFormControl" matInput placeholder="Ex. Jonas Jonaitis" value="">
-    <mat-error *ngIf="loginFormControl.hasError('required')">
-      Please enter your user name
-    </mat-error>
-  </mat-form-field>
+<div class="container">
+    <form class="login-form">
+        <h1>Welcome to Desk Booking Application!</h1>
+        <mat-form-field class="login-full-width" appearance="fill">
+            <mat-label>User ID</mat-label>
+            <input [formControl]="loginFormControl" matInput placeholder="Ex. 12345" value="">
+            <mat-error *ngIf="loginFormControl.hasError('required')">
+                Please enter your user name
+            </mat-error>
+        </mat-form-field>
 
-  <mat-form-field class="login-full-width" appearance="fill">
-    <mat-label>Password</mat-label>
-    <input type="password" matInput>
-  </mat-form-field>
-  <button class="login-buttons" mat-raised-button color="primary">Login</button>
-  <button class="login-buttons" mat-raised-button>Cancel</button>
-</form>
+        <mat-form-field class="login-full-width" appearance="fill">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput [formControl]="passwordFormControl">
+            <mat-error *ngIf="passwordFormControl.hasError('required')">
+                Please enter your password
+            </mat-error>
+        </mat-form-field>
+        <button class="login-buttons" mat-raised-button color="primary" (click)="login()">Login</button>
+        <button class="login-buttons" mat-raised-button (click)="resetForm()">Cancel</button>
+    </form>
+    <p>In case you faced login issues, please contact <a href="app.support@corporate.com">app.support@corporate.com</a>
+    </p>
+</div>
