--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,8 +1,19 @@
+.container {
+  border: 1px solid black;
+  width: 768px;
+  margin: 30px;
+  padding: 10px 100px;
+}
+
+h1 {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
 .login-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-  border: 1px solid black;
   margin: 20px;
   padding: 20px;
 }
@@ -10,6 +21,12 @@
 .login-full-width {
   width: 100%;
 }
+
 .login-buttons {
   margin: 10px;
+}
+
+p {
+  margin: 15px;
+  text-align: right;
 }
