newest changes added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
+<app-login></app-login>
+<app-header></app-header>
+  <app-calendar></app-calendar>
+  <app-reservations></app-reservations>
   <router-outlet></router-outlet>
 </div>
