--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -5,6 +5,19 @@
 
   <div fxFlex fxLayout="column" fxLayoutAlign="center center">
     <p>reservations for {{ reservationDate }}</p>
-
+  </div>
+</div>
+<div fxLayout="row">
+  <div *ngFor="let room of desksReservationsByDate">
+    <h2>{{room.roomName}}</h2>
+    <div *ngFor="let desk of room.desks">
+      <p>{{desk.deskNumber}}</p>
+      <div *ngIf="desk.available; else reservationInfo">
+        <button (click)="placeReservation(desk.id)">BOOK</button>
+      </div>
+      <ng-template #reservationInfo>
+        <p>booked by {{desk.info.userFirstName}}</p>
+      </ng-template>
+    </div>
   </div>
 </div>
