--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -3,42 +3,50 @@
   <app-calendar [date]="reservationDate"
                 (onDateChange)="handleReservationChange($event)"></app-calendar>
 
-  <div fxFlex fxLayout="column" fxLayoutAlign="center center">
-    <p>reservations for {{ reservationDate }}</p>
-  </div>
-</div>
+  <div fxLayout="column" fxLayoutAlign="center center">
 
-{{errorMsg}}
-
-
-<div *ngIf="currentReservation?.date == undefined; then reservationsDisplay else message">
-    {{currentReservation?.date}}
-</div>
-
-<ng-template #message>
-  <p>you already have reservation on {{currentReservation?.date}}, cancel this reservation?</p>
-  <button (click)="cancelReservation(currentReservation?.reservationId)">cancel</button>
-  <button>keep reservation</button>
-
-</ng-template>
-
-
-<ng-template #reservationsDisplay>
-  <div fxLayout="row">
-    <div *ngFor="let room of desksReservationsByDate">
-      <h2>{{room.roomName}}</h2>
-      <div *ngFor="let desk of room.desks">
-        <p>{{desk.deskNumber}}</p>
-        <div *ngIf="desk.available; else reservationInfo">
-          <button (click)="placeReservation(desk.id)">BOOK</button>
-        </div>
-        <ng-template #reservationInfo>
-          <p>booked by {{desk.info.userFirstName}}</p>
-        </ng-template>
-      </div>
+    <div fxFlex  fxLayoutAlign="center center">
+      <p>reservations for {{ reservationDate }}</p>
     </div>
+
+    <div fxLayout="row">
+      <div *ngIf="displayReservationMessage; then message else reservationsDisplay2">
+      </div>
+
+      <ng-template #message>
+        <app-error-reservation (cancelButtonClick)="cancelReservation($event)"
+                               (keepReservationButtonClick)="displayReservationMessage=false"
+                               [currentReservation]="currentReservation"></app-error-reservation>
+      </ng-template>
+
+
+
+      <ng-template #reservationsDisplay2>
+        <div *ngFor="let room of desksReservationsByDate;">
+          <h2>{{room.roomName}}</h2>
+          <div *ngFor="let desk of room.desks">
+            <mat-checkbox [disabled]="!desk.available" (mouseover)="displayUser=true" (mouseout)="displayUser=false"
+                          [checked]="desk.id == currentReservation?.deskId || desk.id == selected"
+                          (change)="validateClick(desk.id)"
+
+            >{{desk!.deskNumber}}</mat-checkbox>
+            <div [hidden]="!displayUser">
+              {{desk?.info?.userFirstName}}
+            </div>
+          </div>
+        </div>
+        <button [disabled]="selected == undefined" (click)="placeReservation()">book</button>
+      </ng-template>
+
+
+
+    </div>
+
   </div>
-</ng-template>
+
+</div>
+
+
 
 
 
