--- a/src/app/components/error-reservation/error-reservation.component.css
+++ b/src/app/components/error-reservation/error-reservation.component.css
@@ -1,5 +1,7 @@
-#message {
+.container {
   background-color: orange;
+  width: 100%;
+  height: 300px;
 }
 
 /*# sourceMappingURL=error-reservation.component.css.map */
