--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -1,7 +1,7 @@
 
 <div fxLayout="row" >
   <app-calendar [date]="reservationDate"
-                (onDateChange)="handleReservationChange($event)"></app-calendar>
+                (onDateChange)="handleReservationChange($event!)"></app-calendar>
 
   <div fxLayout="column" fxLayoutAlign="center center">
 
