added successful reservation message

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-calendar
+  <mat-calendar [minDate]="minDate"
           [(selected)]="date"
           (selectedChange)="onDateChange.emit($event)"
   ></mat-calendar>
