--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-header></app-header>
   <app-calendar></app-calendar>
   <app-reservations></app-reservations>
+  <app-admin></app-admin>
   <router-outlet></router-outlet>
 </div>
