--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -1,3 +1,7 @@
-
+.container {
+  background-color: orange;
+  width: 1000px;
+  height: 300px;
+}
 
 /*# sourceMappingURL=admin.component.css.map */
