--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-<app-login></app-login>
+<!--<app-login></app-login>-->
 <app-header></app-header>
-  <app-calendar></app-calendar>
-  <app-reservations></app-reservations>
-  <app-admin></app-admin>
+<!--  <app-calendar></app-calendar>-->
+<!--  <app-reservations></app-reservations>-->
+<!--  <app-admin></app-admin>-->
   <router-outlet></router-outlet>
 </div>
