--- a/src/app/components/forms/edit-user-form/edit-user-form.component.html
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.html
@@ -37,7 +37,8 @@
     <div *ngIf="expEmail?.errors?.['required']">
       <p>email is required</p>
     </div>
-    <div *ngIf="expEmail?.errors?.['validateEmail']">
+    <div *ngIf="expEmail?.errors?.['validateEmail']"
+    >
       <p>email must end with @corporate.com</p>
     </div>
   </div>
