--- a/src/app/components/forms/search-user/search-user.component.html
+++ b/src/app/components/forms/search-user/search-user.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchUserForm" (ngSubmit)="searchUser()">
+<form [formGroup]="searchUserForm">
   <label for="userId">User ID:</label>
   <input id="userId" type="text" formControlName="userId">
 
