--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,24 +1,29 @@
-<div *ngIf="role == 'user'; then user else admin"></div>
-<ng-template #user>
+<div [hidden]="!isLogged">
   <header>
     <nav>
       <ul>
-        <li><a [routerLink]="'/'">Home</a></li>
+        <li><a [routerLink]="'/home'">Home</a></li>
         <li><a [routerLink]="'/reservations'">reservations</a></li>
         <li><a [routerLink]="'/history'">history</a></li>
-      </ul>
-    </nav>
-  </header>
-</ng-template>
+        <li [hidden]="role !== 'ADMINISTRATOR'"><a [routerLink]="'/edit'">edit</a></li>
+        <li [hidden]="role !== 'ADMINISTRATOR'"><a (click)="addUser()">add user</a></li>
 
-<ng-template #admin>
-  <header>
-    <nav>
-      <ul>
-        <li><a [routerLink]="'/'">Home</a></li>
-        <li><a [routerLink]="'/edit'">edit</a></li>
-        <li><a (click)="addUser()">add user</a></li>
       </ul>
+      <button (click)="logout()">LOGOUT</button>
     </nav>
   </header>
-</ng-template>
+</div>
+
+
+
+<!--<ng-template #admin>-->
+<!--  <header>-->
+<!--    <nav>-->
+<!--      <ul>-->
+<!--        <li><a [routerLink]="'/'">Home</a></li>-->
+<!--        <li><a [routerLink]="'/edit'">edit</a></li>-->
+<!--        <li><a (click)="addUser()">add user</a></li>-->
+<!--      </ul>-->
+<!--    </nav>-->
+<!--  </header>-->
+<!--</ng-template>-->
