--- a/src/app/components/adim-add-user/adim-add-user.component.html
+++ b/src/app/components/adim-add-user/adim-add-user.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <app-edit-user-form
+<!--  <app-edit-user-form
     [isEditForm]="false"
     [displaySuccessMessage]="displaySuccessMessage"
     (savedUser)="addNewUser($event)"
     (addNewUser)="displaySuccessMessage=false"
-  ></app-edit-user-form>
+  ></app-edit-user-form>-->
 </div>
