--- a/src/app/components/booking-messages/booking-messages.component.html
+++ b/src/app/components/booking-messages/booking-messages.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="reservationPlaced; then success else error "></div>
 
 <ng-template #error >
-  <div class="container">
+  <div class="container" mat-dialog-content>
     <p>you already have reservation on {{currentReservation?.date}}, cancel this reservation on desk number
       {{currentReservation?.deskNumber}} on {{currentReservation?.deskNumber}} ?</p>
     <button (click)="inputIdToCancelButton(currentReservation!.reservationId)">cancel</button>
@@ -10,7 +10,7 @@
 </ng-template>
 
 <ng-template #success >
-  <div class="container">
+  <div class="container">]
     <p>Reservation successful</p>
     <p>date: {{currentReservation.date}}</p>
     <p>Room: {{currentReservation.roomName}}</p>
