--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -10,18 +10,18 @@
     </div>
 
     <div fxLayout="row">
-      <div *ngIf="displayReservationMessage; then message else reservationsDisplay2">
-      </div>
+<!--      <div *ngIf="displayReservationMessage; then message else reservationsDisplay2">-->
+<!--      </div>-->
 
-      <ng-template #message>
-        <app-booking-messages (cancelButtonClick)="cancelReservation($event)"
-                               [reservationPlaced]="placedReservation!"
-                               (keepReservationButtonClick)="displayReservationMessage=false"
-                               (okClicked)="displayReservationMessage=false; placedReservation=false"
-                               [currentReservation]="currentReservation!"></app-booking-messages>
-      </ng-template>
+<!--      <ng-template #message>-->
+<!--        <app-booking-messages (cancelButtonClick)="cancelReservation($event)"-->
+<!--                               [reservationPlaced]="placedReservation!"-->
+<!--                               (keepReservationButtonClick)="displayReservationMessage=false"-->
+<!--                               (okClicked)="displayReservationMessage=false; placedReservation=false"-->
+<!--                               [currentReservation]="currentReservation!"></app-booking-messages>-->
+<!--      </ng-template>-->
 
-      <ng-template #reservationsDisplay2>
+
         <div *ngFor="let room of desksReservationsByDate;">
           <h2>{{room.roomName}}</h2>
           <div *ngFor="let desk of room.desks">
@@ -35,8 +35,6 @@
           </div>
         </div>
         <button [disabled]="selected == undefined" (click)="placeReservation()">book</button>
-      </ng-template>
-
 
 
     </div>
