--- a/src/app/components/modals/reservations-dialog/reservations-dialog.component.html
+++ b/src/app/components/modals/reservations-dialog/reservations-dialog.component.html
@@ -1,7 +1,8 @@
 <div mat-dialog-content fxLayout="column">
   <app-booking-messages (cancelButtonClick)="cancelReservation($event)"
-                        [reservationPlaced]="false"
+                        [reservationPlaced]="data.placedReservation"
                         (keepReservationButtonClick)="handleCancel()"
+                        (okClicked)="handleCancel()"
                         [currentReservation]="data.currentReservation"></app-booking-messages>
 </div>
 
