--- a/src/app/components/booking-messages/booking-messages.component.html
+++ b/src/app/components/booking-messages/booking-messages.component.html
@@ -1,7 +1,10 @@
-<div *ngIf="reservationPlaced; then success else error "></div>
 
-<ng-template #error >
-  <div class="container" mat-dialog-content>
+<div *ngIf="message=='reservationExists'; then reservationExists"></div>
+<div *ngIf="message=='successful'; then successful"></div>
+<div *ngIf="message=='noDesks'; then noDesks"></div>
+
+<ng-template #reservationExists>
+  <div class="container" mat-dialog-content >
     <p>you already have reservation on {{currentReservation?.date}}, cancel this reservation on desk number
       {{currentReservation?.deskNumber}} on {{currentReservation?.deskNumber}} ?</p>
     <button mat-button (click)="inputIdToCancelButton(currentReservation!.reservationId)">cancel reservation</button>
@@ -9,8 +12,9 @@
   </div>
 </ng-template>
 
-<ng-template #success >
-  <div class="container">]
+
+<ng-template #successful>
+  <div mat-dialog-content class="container" >
     <p>Reservation successful</p>
     <p>date: {{currentReservation.date}}</p>
     <p>Room: {{currentReservation.roomName}}</p>
@@ -18,3 +22,12 @@
     <button mat-button (click)="okClicked.emit()">OKAY</button>
   </div>
 </ng-template>
+
+<ng-template #noDesks>
+  <div mat-dialog-content class="container">
+    <p>No desks available</p>
+    <button mat-button (click)="okClicked.emit()">OKAY</button>
+  </div>
+</ng-template>
+
+
