--- a/src/app/components/forms/edit-user-form/edit-user-form.component.html
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.html
@@ -14,13 +14,13 @@
   <mat-form-field>
     <mat-label>User Id</mat-label>
     <input id="userid" [readOnly]="isEditForm" matInput formControlName="userId">
-    <mat-error *ngIf="expUserId?.errors?.['required']">
+    <mat-error *ngIf="getUserId?.errors?.['required']">
       id field is required
     </mat-error>
-    <mat-error *ngIf="expUserId?.errors?.['minlength']|| expUserId?.errors?.['maxlength']">
+    <mat-error *ngIf="getUserId?.errors?.['minlength']|| getUserId?.errors?.['maxlength']">
       id must be 8 digits
     </mat-error>
-    <mat-error *ngIf="expUserId?.errors?.['idAlreadyExists']">
+    <mat-error *ngIf="getUserId?.errors?.['idAlreadyExists']">
       id already exists
     </mat-error>
   </mat-form-field>
@@ -28,10 +28,10 @@
   <mat-form-field>
     <mat-label>First Name</mat-label>
     <input [readOnly]="isEditForm" matInput formControlName="firstName">
-    <mat-error *ngIf="expFirstName?.errors?.['required']">
+    <mat-error *ngIf="getFirstName?.errors?.['required']">
       first name is required
     </mat-error>
-    <mat-error *ngIf="expFirstName?.errors?.['maxlength']">
+    <mat-error *ngIf="getFirstName?.errors?.['maxlength']">
       cannot be longer then 40 characters
     </mat-error>
   </mat-form-field>
@@ -39,10 +39,10 @@
   <mat-form-field>
     <mat-label>Last Name</mat-label>
     <input [readOnly]="isEditForm" matInput formControlName="lastName">
-    <mat-error *ngIf="expLastName?.errors?.['required']">
+    <mat-error *ngIf="getLastName?.errors?.['required']">
       last name is required
     </mat-error>
-    <mat-error *ngIf="expLastName?.errors?.['maxlength']">
+    <mat-error *ngIf="getLastName?.errors?.['maxlength']">
       cannot be longer then 40 characters
     </mat-error>
   </mat-form-field>
@@ -50,7 +50,7 @@
   <mat-form-field>
     <mat-label>Middle Name</mat-label>
     <input [readOnly]="isEditForm" matInput formControlName="middleName">
-    <mat-error *ngIf="expLastName?.errors?.['maxlength']">
+    <mat-error *ngIf="getLastName?.errors?.['maxlength']">
       cannot be longer then 40 characters
     </mat-error>
   </mat-form-field>
@@ -58,13 +58,13 @@
   <mat-form-field>
     <mat-label>Email</mat-label>
     <input [readOnly]="isEditForm" matInput formControlName="email">
-    <mat-error *ngIf="expEmail?.errors?.['required']">
+    <mat-error *ngIf="getEmail?.errors?.['required']">
       email is required
     </mat-error>
-    <mat-error *ngIf="expEmail?.errors?.['validateEmail']">
+    <mat-error *ngIf="getEmail?.errors?.['validateEmail']">
       email must end with @corporate.com
     </mat-error>
-    <mat-error *ngIf="expEmail?.errors?.['emailAlreadyExists']">
+    <mat-error *ngIf="getEmail?.errors?.['emailAlreadyExists']">
       email already exists
     </mat-error>
   </mat-form-field>
@@ -76,8 +76,8 @@
     </mat-select>
   </mat-form-field>
 
-  <section class="example-section" >
-    <mat-checkbox class="example-margin" [checked]="expActive?.value">active</mat-checkbox>
+  <section class="example-section">
+    <mat-checkbox class="example-margin" formControlName="active" [checked]="getActive?.value" >active</mat-checkbox>
   </section>
 
     <div [hidden]="!passwordChanged">
