--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -26,7 +26,7 @@
     </div>
 
   </div>
-<img src="/src/assets/img/office-map.png">
+<img src="assets/img/office-map.png" width="40%" >
 </div>
 
 
