--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -1,40 +1,57 @@
 div {
-    margin: auto;
+  margin: auto;
 }
 
 .room {
-border: 2px solid grey;
-margin: 20px 20px 20px 20px;
+  border: 2px solid rgb(175, 169, 169);
+  padding: 10px 10px 10px 10px;
+  margin: 20px 20px 20px 20px;
 }
 
 .one-day-selector {
-    align-self: flex-start;
-    margin: 0 10px 0 10px;
+  align-self: flex-start;
+  margin: 0 10px 0 10px;
 }
 
 .reservations {
-    max-width: 400px;
-    flex-wrap: wrap;
-    justify-content: center;
+  max-width: 400px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 img {
-    width: 40%;
-    height: 40%;
-    margin-top: 60px;
+  width: 40%;
+  height: 40%;
+  margin-top: 60px;
 }
 
 .middle-container {
-    margin-top: 30px;
-} 
-
-.book-button {
-    max-width: 70px;
-    max-height: 70px;
-    margin: 20px 20px 20px 20px;
-
+  margin-top: 30px;
 }
 
-p {
-    
+.book-button {
+  width: 100px;
+  height: 70px;
+  margin: 20px 20px 20px 20px;
+  position: fixed;
+  right: 300px;
+  bottom: 0;
+  background-color: rgb(175, 169, 169);
+  color: black;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
+}
+
+.book-button:disabled {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+.book-button:hover:enabled {
+  width: 110px;
+  height: 80px;
+  border: 4px solid #9999994b;
+  background-color: rgb(175, 169, 169);
+  color: black;
 }
