--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,8 +5,8 @@
         <li><a [routerLink]="'/home'">Home</a></li>
         <li><a [routerLink]="'/reservations'">reservations</a></li>
         <li><a [routerLink]="'/history'">history</a></li>
-        <li [hidden]="role !== 'ADMINISTRATOR'"><a [routerLink]="'/edit'">edit</a></li>
-        <li [hidden]="role !== 'ADMINISTRATOR'"><a (click)="addUser()">add user</a></li>
+        <li [hidden]="role == 'STANDARD_USER'"><a [routerLink]="'/edit'">edit</a></li>
+        <li [hidden]="role == 'STANDARD_USER'"><a (click)="addUser()">add user</a></li>
 
       </ul>
       <button (click)="logout()">LOGOUT</button>
