--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -15,7 +15,7 @@
           <div *ngFor="let desk of room.desks">
             <mat-checkbox [disabled]="!desk.available" (mouseover)="displayReservationInfo=false; hoverId = desk.id" (mouseout)="displayReservationInfo=true;"
                           [checked]="desk.id == currentReservation?.deskId || desk.id == selected"
-                          (click)="validateClick(desk.id)"
+                          (change)="validateClick(desk.id)"
             >{{desk!.deskNumber}}</mat-checkbox>
             <div *ngIf="displayReservationInfo && desk.id == hoverId">
               {{desk?.info?.userFirstName}}
