--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,9 +5,12 @@
         <li><a [routerLink]="'/home'">Home</a></li>
         <li><a [routerLink]="'/reservations'">reservations</a></li>
         <li><a [routerLink]="'/history'">history</a></li>
-        <li [hidden]="role == 'STANDARD_USER'"><a [routerLink]="'/edit'">edit</a></li>
-        <li [hidden]="role == 'STANDARD_USER'"><a (click)="addUser()">add user</a></li>
-
+        <div *ngIf="isAdmin">
+          <li ><a [routerLink]="'/edit'">edit</a></li>
+        </div>
+        <div *ngIf="isAdmin">
+          <li><a (click)="addUser()">add user</a></li>
+        </div>
       </ul>
       <button (click)="logout()">LOGOUT</button>
     </nav>
