cancel button added

--- a/src/app/components/reservations/reservations.component.html
+++ b/src/app/components/reservations/reservations.component.html
@@ -23,6 +23,7 @@
           </div>
         </div>
         <button class="book-button" [disabled]="selected == undefined" (click)="placeReservation()">Book the desk</button>  
+        <button class="cancel-button" onclick="window.history.back()">Cancel</button>
     </div>  
 
   </div>
