--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -53,10 +53,22 @@ img {
   color: #666666;
 }
 
-.book-button:hover:enabled {
+.book-button:hover:enabled, .cancel-button:hover {
   border: 2px solid grey;
   background-color: orange;
   color: black;
+}
+.cancel-button {
+  width: 100px;
+  height: 50px;
+  margin: 20px 20px 20px 20px;
+  position: fixed;
+  right: 420px;
+  bottom: 0;
+  background-color: rgb(175, 169, 169);
+  color: black;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
 }
 
 ::ng-deep
@@ -71,3 +83,4 @@ img {
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
   background-color: orange;
 }
+
